feat: set up an application layout

--- a/components/HeaderApp/HeaderApp.module.scss
+++ b/components/HeaderApp/HeaderApp.module.scss
@@ -7,6 +7,8 @@
   width: 100%;
   gap: 40px;
   align-items: center;
+  @include width_1360;
+  margin: 0 auto;
 
   .company {
     @include grow-shrink;
