--- a/layout/LayoutApp/LayoutApp.module.scss
+++ b/layout/LayoutApp/LayoutApp.module.scss
@@ -1,7 +1,10 @@
-@import '@styles/_mixins';
+@import "@styles/_mixins";
 
 .wrap {
-  @include width_1360;
   @include grid-1fr;
-  margin: 0 auto;
+
+  .main {
+    @include width_1360;
+    margin: 0 auto;
+  }
 }
