--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,3 +2,5 @@ $colorLigthGrey: rgba(11, 6, 20, 0.30);
 $colorText: #0B0614;
 $colorCta: #FF5029;
 $colorWhite: #fff;
+$colorLigthText: rgba(255, 255, 255, 0.80);
+$colorLine: rgba(255, 255, 255, 0.15);
