--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,3 +4,4 @@ $colorCta: #FF5029;
 $colorWhite: #fff;
 $colorLigthText: rgba(255, 255, 255, 0.80);
 $colorLine: rgba(255, 255, 255, 0.15);
+$boxShadow: 0px 30px 60px 0px rgba(198, 191, 191, 0.18);
