feat: add a section guides

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,11 @@
-$colorLigthGrey: rgba(11, 6, 20, 0.30);
-$colorText: #0B0614;
-$colorCta: #FF5029;
+$colorLigthGrey: rgba(11, 6, 20, 0.3);
+$colorText: #0b0614;
+$colorCta: #ff5029;
 $colorWhite: #fff;
-$colorLigthText: rgba(255, 255, 255, 0.80);
+$colorLigthText: rgba(255, 255, 255, 0.8);
 $colorLine: rgba(255, 255, 255, 0.15);
+$colorGreyComment: rgba(11, 6, 20, 0.60);
+
 $boxShadow: 0px 30px 60px 0px rgba(198, 191, 191, 0.18);
+$cardShadow: 0px 30px 60px 0px rgba(198, 191, 191, 0.15),
+  0px -8px 20px 0px rgba(235, 235, 235, 0.15);
