--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,7 @@ $colorWhite: #fff;
 $colorLigthText: rgba(255, 255, 255, 0.8);
 $colorLine: rgba(255, 255, 255, 0.15);
 $colorGreyComment: rgba(11, 6, 20, 0.60);
+$bgColor: #FEF4F5;
 
 $boxShadow: 0px 30px 60px 0px rgba(198, 191, 191, 0.18);
 $cardShadow: 0px 30px 60px 0px rgba(198, 191, 191, 0.15),
