refactor: make components

--- a/templates/HomeTemplate/components/MainBanner/components/Filters/components/Select/Select.module.scss
+++ b/templates/HomeTemplate/components/MainBanner/components/Filters/components/Select/Select.module.scss
@@ -35,7 +35,7 @@
 
     &:after {
       content: "";
-      background-image: url("../../../../../../public/img/icon_chevron_down.svg");
+      background-image: url("../../../../../../../../public/img/icon_chevron_down.svg");
       background-repeat: no-repeat;
       background-size: 24px;
       width: 24px;
