feat: add styles to the block  becam guides

--- a/components/Banner/Banner.module.scss
+++ b/components/Banner/Banner.module.scss
@@ -7,7 +7,7 @@
   .action {
     position: relative;
     width: 91.2%;
-    margin: -64px auto;
+    margin: -64px auto 0;
     border-radius: 24px;
     background: $colorWhite;
     box-shadow: $boxShadow;
