style: fix avatar

--- a/templates/HomeTemplate/components/Guides/components/Guid/Guid.module.scss
+++ b/templates/HomeTemplate/components/Guides/components/Guid/Guid.module.scss
@@ -15,7 +15,7 @@
     .avatar {
       border-radius: 50%;
       border: 1px solid $colorCta;
-      object-fit: contain;
+      object-fit: cover;
       object-position: center;
     }
 
