feat: add a form to register a guide

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -106,3 +106,14 @@
     opacity: 0.6;
   }
 }
+
+@mixin popup_init_animation {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.2s, opacity 0.2s linear;
+}
+
+@mixin popup_end_animation {
+  visibility: visible;
+  opacity: 1;
+}
