--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,6 +8,7 @@ $colorGreyComment: rgba(11, 6, 20, 0.6);
 $bgColor: #fef4f5;
 $colorType: #FEF4F5;
 $colorOverlay: rgba(0, 0, 0, .3);
+$colorError: #ff2400;
 
 $boxShadow: 0px 30px 60px 0px rgba(198, 191, 191, 0.18);
 $cardShadow: 0px 30px 60px 0px rgba(198, 191, 191, 0.15),
