--- a/templates/LoginTemplate/LoginTemplate.module.scss
+++ b/templates/LoginTemplate/LoginTemplate.module.scss
@@ -2,13 +2,25 @@
 @import "@styles/variables";
 
 .buttonGoBack {
-max-width: max-content;
-max-height: 60px;
+  max-width: max-content;
+  max-height: 60px;
 }
 
 .h1 {
   text-align: center;
   padding: 50px 0;
+}
+
+.textLink {
+  padding-bottom: 50px;
+  @include font_s24_w700;
+  text-align: center;
+  color: $colorText;
+
+  .link {
+    @include el_hover;
+    border-bottom: 1px solid $colorCta;
+  }
 }
 
 .form {
