--- a/components/HeaderApp/HeaderApp.module.scss
+++ b/components/HeaderApp/HeaderApp.module.scss
@@ -46,4 +46,9 @@
     @include font_s16_w700;
     @include el_hover;
   }
+
+  .buttonExit {
+    @include reset-button;
+    @include el_hover;
+  }
 }
