--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -87,6 +87,11 @@
   font-weight: 800;
 }
 
+@mixin font_s24_w500 {
+  font-size: 24px;
+  font-weight: 500;
+}
+
 @mixin font_s24_w700 {
   font-size: 24px;
   font-weight: 700;
