--- a/templates/GuideTemplate/GuideTemplate.module.scss
+++ b/templates/GuideTemplate/GuideTemplate.module.scss
@@ -6,3 +6,39 @@
   height: max-content;
   margin-top: 20px;
 }
+
+.title {
+  padding: 50px 0;
+  text-align: center;
+}
+
+.about {
+  position: relative;
+  @include flex-column;
+  align-items: center;
+  gap: 20px;
+
+  .avatar {
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .contact {
+    @include font_s24_w700;
+    color: $colorText;
+  }
+
+  .accent {
+    color: $colorCta;
+  }
+}
+
+.text {
+  color: $colorText;
+  @include font_s24_w500;
+  line-height: 1.3;
+  padding: 50px 0 100px;
+}
