--- a/templates/HomeTemplate/components/Inspiration/components/Article/Article.module.scss
+++ b/templates/HomeTemplate/components/Inspiration/components/Article/Article.module.scss
@@ -18,6 +18,11 @@
 
     .img {
       border-radius: 16px;
+
+      @include media_1440 {
+        width: 350px;
+        height: auto;
+      }
     }
 
     .description {
