--- a/layout/LayoutApp/LayoutApp.module.scss
+++ b/layout/LayoutApp/LayoutApp.module.scss
@@ -1,4 +1,5 @@
 @import "@styles/_mixins";
+@import "@styles/_variables";
 
 .wrap {
   @include flex-column;
@@ -9,6 +10,13 @@
     margin: 0 auto;
     @include grow-shrink;
     @include grid-1fr;
-    @include media_1440;
+
+    @include media_1440 {
+      max-width: $media_1440;
+    }
+
+    @include media_1180 {
+      max-width: $media_1180;
+    }
   }
 }
