--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -17,3 +17,6 @@ $shadowArticle: 0px 30px 60px 0px rgba(198, 191, 191, 0.15),
   0px -8px 20px 0px rgba(235, 235, 235, 0.15);
 $cardShadowHover: 0px 30px 60px 0px rgba(255, 80, 41, 0.15),
   0px -8px 20px 0px rgba(255, 80, 41, 0.15);
+
+$media_1440: 1024px;
+$media_1180: 900px;
