--- a/templates/HomeTemplate/components/About/components/Card/Card.module.scss
+++ b/templates/HomeTemplate/components/About/components/Card/Card.module.scss
@@ -14,11 +14,26 @@
     width: 320px;
   }
 
+  @include media_1180 {
+    width: 280px;
+  }
+
+  .img {
+    @include media_1180 {
+      width: 134px;
+      height: 240px;
+    }
+  }
+
   .step {
     color: $colorText;
     @include font_s40_w700;
     text-align: center;
     max-width: 225px;
     line-height: 1.25;
+
+    @include media_1180 {
+      font-size: 28px;
+    }
   }
 }
