--- a/templates/HomeTemplate/components/MainBanner/MainBanner.module.scss
+++ b/templates/HomeTemplate/components/MainBanner/MainBanner.module.scss
@@ -6,6 +6,11 @@
 }
 
 .buttonSearch {
-  @include font_s20_w700;
-  padding: 27px 32px;
+  padding: 20px 40px;
+  @include font_s18_w700;
+
+  @include media_1180 {
+    padding: 20px;
+    @include font_s16_w600;
+  }
 }
