--- a/templates/HomeTemplate/components/MainBanner/MainBanner.module.scss
+++ b/templates/HomeTemplate/components/MainBanner/MainBanner.module.scss
@@ -13,4 +13,9 @@
     padding: 20px;
     @include font_s16_w600;
   }
+
+  @include media_980 {
+    padding: 10px;
+    @include font_s14_w500;
+  }
 }
