--- a/templates/HomeTemplate/components/About/components/Card/Card.module.scss
+++ b/templates/HomeTemplate/components/About/components/Card/Card.module.scss
@@ -18,10 +18,20 @@
     width: 280px;
   }
 
+  @include media_980 {
+    padding: 30px 20px;
+    width: 230px;
+  }
+
   .img {
     @include media_1180 {
       width: 134px;
       height: 240px;
+    }
+
+    @include media_980 {
+      width: 100px;
+      height: 184px;
     }
   }
 
@@ -34,6 +44,11 @@
 
     @include media_1180 {
       font-size: 28px;
+    }
+
+    @include media_980 {
+      font-size: 24px;
+      max-width: 150px;
     }
   }
 }
