--- a/components/HeaderApp/components/NavMenu/NavMenu.module.scss
+++ b/components/HeaderApp/components/NavMenu/NavMenu.module.scss
@@ -14,6 +14,10 @@
     gap: 20px;
   }
 
+  @include media_820 {
+    display: none;
+  }
+
   .link {
     color: $colorText;
     @include font_s16_w700;
