--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -24,3 +24,4 @@ $cardShadowHover: 0px 30px 60px 0px rgba(255, 80, 41, 0.15),
 $media_1440: 1024px;
 $media_1180: 900px;
 $media_980: 768px;
+$padding_820: 70px;
