--- a/components/Banner/Banner.module.scss
+++ b/components/Banner/Banner.module.scss
@@ -17,6 +17,11 @@
     @include media_980 {
       width: $media_980;
     }
+
+    @include media_820 {
+      width: 100%;
+      height: auto;
+    }
   }
 
   .action {
@@ -46,6 +51,13 @@
 
     @include media_980 {
       margin: -64px 0 0;
+    }
+
+    @include media_820 {
+      width: 100%;
+      margin: -70px 0 0;
+      border-radius: 10px;
+      padding: 15px;
     }
   }
 }
