--- a/templates/HomeTemplate/components/About/components/Card/Card.module.scss
+++ b/templates/HomeTemplate/components/About/components/Card/Card.module.scss
@@ -23,6 +23,10 @@
     width: 230px;
   }
 
+  @include media_820 {
+    width: calc((100% - 40px - 40px) / 3);
+  }
+
   .img {
     @include media_1180 {
       width: 134px;
