--- a/templates/HomeTemplate/components/Guides/components/Guid/Guid.module.scss
+++ b/templates/HomeTemplate/components/Guides/components/Guid/Guid.module.scss
@@ -25,6 +25,10 @@
       min-height: 340px;
     }
 
+    @include media_820 {
+      width: 250px;
+    }
+
     .avatar {
       border-radius: 50%;
       border: 1px solid $colorCta;
