--- a/templates/HomeTemplate/components/Inspiration/components/Article/Article.module.scss
+++ b/templates/HomeTemplate/components/Inspiration/components/Article/Article.module.scss
@@ -16,6 +16,12 @@
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 
+    @include media_820 {
+      grid-row: 1 / 2;
+      display: flex;
+      gap: 30px;
+    }
+
     .img {
       border-radius: 16px;
 
@@ -26,6 +32,10 @@
 
       @include media_1180 {
         width: 250px;
+      }
+
+      @include media_820 {
+        width: 200px;
       }
     }
 
@@ -53,6 +63,10 @@
 
       @include media_1180 {
         height: auto;
+      }
+
+      @include media_820 {
+        width: 200px;
       }
     }
 
@@ -86,6 +100,10 @@
 
       @include media_1180 {
         @include font_s24_w700;
+      }
+
+      @include media_820 {
+        max-width: 100%;
       }
 
       .link {
