--- a/templates/HomeTemplate/components/MainBanner/components/Filters/components/Select/Select.module.scss
+++ b/templates/HomeTemplate/components/MainBanner/components/Filters/components/Select/Select.module.scss
@@ -21,6 +21,10 @@
     opacity: 0.5;
     @include font_s16_w600;
     margin-bottom: 8.5px;
+
+    @include media_820 {
+      @include font_s14_w500;
+    }
   }
 
   &Current {
@@ -35,6 +39,10 @@
 
     @include media_1180 {
       font-size: 16px;
+    }
+
+    @include media_820 {
+      @include font_s14_w500;
     }
 
     .text {
@@ -52,6 +60,12 @@
       height: 24px;
       transform: rotate(0deg);
       transition: transform 0.2s linear;
+
+      @include media_820 {
+        width: 18px;
+        height: 18px;
+        background-size: 18px;
+      }
     }
 
     &Active {
